--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,84 @@
-.App {
-  text-align: center;
-}
+@import url('https://fonts.googleapis.com/css?family=Bangers');
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#root {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  min-height: 100dvh;
+  min-width: 100dvw;
+  width: fit-content;
+  text-align: center;
+  overflow-x: hidden;
 }
 
-.App-link {
-  color: #61dafb;
+.img{
+  image-rendering: auto;
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
+  image-rendering: -webkit-optimize-contrast;
+  height: 256PX;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.gender {
+  min-width: 32px;
+  min-height: 32px;
+  padding: 8px;
+  display: flex;
+  justify-content: center;
+  justify-items: center;
+  align-items: center;
+  border: 4px solid black;
+  border-radius: 32px;
+  background-color: rgb(141, 145, 145);
 }
+
+.gender * {
+  min-width: 32px;
+  min-height: 32px;
+  text-align: center;
+  font-size: 24px;
+  font-weight: bold;
+}
+.space{
+  width: 32px;
+  height: 32px;
+  background-color: transparent;
+  margin: 2px;
+  display: inline-block;
+}
+input[type=text]{
+  width: 32px;
+  height: 32px;
+  background-color: transparent;
+  border: 1px solid black;
+  font-size: 24px;
+  text-align: center;
+  margin: 2px;
+  display: inline-block;
+}
+::placeholder{
+  color: whitesmoke;
+}
+input[type=text].correct{
+  border: 1px solid #87C13D;
+}
+input[type=text].exist{
+  border: 1px solid #E17130;
+}
+
+.textlogo{
+  font-family: 'Bangers';
+  flex-wrap: wrap;
+  flex-grow: 1;
+  font-size: 5vh;
+  height: 5vh;
+
+
+}
+header{
+  height: 5vh;
+  display: flex;
+  min-width: 100dvw;
+}
+
